intervalsets-macros/tests/ui/not_string_literal.stderr
error: expected a single string literal, e.g. `interval!("[0, 10)")`
 --> tests/ui/not_string_literal.rs:4:23
  |
4 |     let _ = interval!(0, 10);
  |                       ^
